--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,124 @@
-$color: red;
+@import 'config';
+@import 'utilities';
+
+// Global Styles
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  background: $color;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  background: #000;
+  color: #fff;
+}
+
+a {
+  text-decoration: none;
+  color: $light-color;
+}
+
+ul {
+  list-style: none;
+}
+
+h2,
+h3,
+h4 {
+  text-transform: uppercase;
+}
+
+img {
+  width: 100%;
+}
+
+// Logo
+#logo {
+  width: 95px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+// Main Nav
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: $dark-color;
+  opacity: 0.8;
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  top: 0px;
+  padding: 0 1.5rem;
+  transition: 0.5s;
+
+  &.top {
+    background-color: transparent;
+  }
+
+  ul {
+    display: flex;
+    align-items: center;
+  }
+
+  li {
+    padding: 1rem 2.2rem;
+
+    a {
+      text-transform: uppercase;
+      border-bottom: 3px transparent solid;
+      padding-bottom: 0.2rem;
+      transition: all 0.5s;
+
+      &:hover {
+        border-color: $medium-color;
+      }
+
+      &.current {
+        border-color: $medium-color;
+      }
+    }
+  }
+}
+
+// Header
+#header {
+  // Header Home
+  &-home {
+    background: $bg-image no-repeat top center/cover;
+    height: 100vh;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+    }
+
+    // Header Content
+    .header-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+
+      h1 {
+        font-size: 4rem;
+        line-height: 1.2;
+      }
+    }
+
+    * {
+      z-index: 10;
+    }
+  }
 }
