basic members section done with grid layout, added images for our heroes

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,8 @@
 // Color variables
 $website-width: 1280px;
-$main-color: #696966;
+$main-color: #0E2F44;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
-$bg-image: url('../img/showcase.jpg');
+$showcase-bg: url('../img/showcase.jpg');
+$members-bg: url('../img/members.jpg');
