added work sections with villains defeated, gifs and bios are displayed in grid layouts

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,9 @@
 // Color variables
 $website-width: 1280px;
-$main-color: #0E2F44;
+$main-color: #0e2f44;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
 $showcase-bg: url('../img/showcase.jpg');
 $members-bg: url('../img/members.jpg');
+$work-bg: url('../img/work.jpg');
