--- a/scss/main.scss
+++ b/scss/main.scss
@@ -79,7 +79,7 @@ img {
       }
 
       &.current {
-        border-color: $medium-color;
+        border-color: $main-color;
       }
     }
   }
@@ -118,7 +118,7 @@ img {
     }
 
     * {
-      z-index: 10;
+      z-index: 99;
     }
   }
 }
@@ -170,7 +170,7 @@ img {
       .villain-gif {
         grid-area: villaingif;
         height: 200px;
-        width: 360px;
+        width: 300px;
       }
       .bio {
         grid-area: bio;
@@ -197,6 +197,64 @@ img {
           height: 100%;
           width: 100%;
         }
+      }
+    }
+  }
+
+  // Home Gallery
+  &-gallery {
+    background: url('../img/gallery/try.png') no-repeat center center/cover;
+    height: 80vh;
+    padding: 1rem 1.5rem;
+
+    .gallery-grid {
+      padding-top: 0.8rem;
+      display: grid;
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 1rem;
+      row-gap: 1.3rem;
+
+      .gallery-grid-item {
+        img {
+          border: 1px solid $medium-color;
+          height: 100%;
+          &:hover {
+            filter: opacity(90%);
+          }
+        }
+      }
+    }
+  }
+}
+
+// Footer
+#footer {
+  background: #000;
+  height: 5rem;
+  color: #fff;
+  border-top: 2px solid $main-color;
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 5rem;
+
+    .social .fab {
+      box-sizing: content-box;
+      margin-right: 1rem;
+      border: 2px #fff solid;
+      border-radius: 50%;
+      height: 20px;
+      width: 20px;
+      line-height: 20px;
+      text-align: center;
+      padding: 0.5rem;
+      
+      &:hover{
+        background: $main-color;
+        cursor: pointer;
       }
     }
   }
