added events page with grid layout and cubic bezier transition effects, added simple contact form

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,6 +4,9 @@ $main-color: #0e2f44;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
-$showcase-bg: url('../img/showcase.jpg');
-$members-bg: url('../img/members.jpg');
-$work-bg: url('../img/work.jpg');
+$showcase-bg: url('../img/home/showcase-bg.jpg');
+$members-bg: url('../img/home/members-bg.jpg');
+$work-bg: url('../img/home/work-bg.jpg');
+$gallery-bg: url('../img/home/gallery-bg.png');
+$inner-nav-bg: url('../img/inner-nav-bg.jpg');
+$events-bg: url('../img/events/23121s.jpeg');
