--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'config';
 @import 'utilities';
+@import 'grid_showcase';
 
 // Global Styles
 * {
@@ -79,7 +80,7 @@ img {
       }
 
       &.current {
-        border-color: $main-color;
+        border-color: $medium-color;
       }
     }
   }
@@ -116,6 +117,17 @@ img {
         line-height: 1.2;
       }
     }
+
+    * {
+      z-index: 99;
+    }
+  }
+
+  // Inner pages
+  &-inner {
+    background: $inner-nav-bg no-repeat 50% / cover;
+    height: 6.5rem;
+    border-bottom: 3px solid $main-color;
 
     * {
       z-index: 99;
@@ -203,7 +215,7 @@ img {
 
   // Home Gallery
   &-gallery {
-    background: url('../img/gallery/try.png') no-repeat center center/cover;
+    background: $gallery-bg no-repeat center center/cover;
     height: 80vh;
     padding: 1rem 1.5rem;
 
@@ -224,6 +236,61 @@ img {
           }
         }
       }
+    }
+  }
+}
+
+// Events
+#events {
+  &-a {
+    background: $events-bg no-repeat 34% center/cover;
+  }
+}
+
+// Contact
+#contact {
+  &-a {
+    .form-grid {
+      display: grid;
+      grid-template-areas:
+        'name email'
+        'subject phone'
+        'message message';
+      grid-gap: 1rem;
+      margin-bottom: 1.2rem;
+
+      // Grid Areas
+      .name-input {
+        grid-area: name;
+      }
+      .email-input {
+        grid-area: email;
+      }
+      .phone-input {
+        grid-area: phone;
+      }
+      .subject-input {
+        grid-area: subject;
+      }
+      .message-input {
+        grid-area: message;
+        height: 100px;
+      }
+      .text-input {
+        background-color: $medium-color;
+        padding: 0.8rem 1rem;
+      }
+    }
+
+    .recaptcha {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    button[type='submit'] {
+      width: 50%;
+      padding: 1rem 0;
     }
   }
 }
@@ -251,8 +318,8 @@ img {
       line-height: 20px;
       text-align: center;
       padding: 0.5rem;
-      
-      &:hover{
+
+      &:hover {
         background: $main-color;
         cursor: pointer;
       }
