compressed images to optimize load speed

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -9,4 +9,4 @@ $members-bg: url('../img/home/members-bg.jpg');
 $work-bg: url('../img/home/work-bg.jpg');
 $gallery-bg: url('../img/home/gallery-bg.png');
 $inner-nav-bg: url('../img/inner-nav-bg.jpg');
-$events-bg: url('../img/events/23121s.jpeg');
+$events-bg: url('../img/events/events-bg.jpeg');
