--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -79,7 +79,7 @@
 
   #events {
     &-a {
-      padding: 1rem 1rem;
+      padding: 1rem 1rem 7rem 1rem;
     }
   }
 }
@@ -136,6 +136,18 @@
       grid-gap: 1.5rem;
     }
   }
+  
+    #home-work {
+    .villains {
+      .villain-gif {
+        height: 300px;
+        width: 450px;
+      }
+
+      .bio {
+      }
+    }
+  }
 
   #home-gallery .gallery-grid {
     grid-template-columns: 1fr 1fr;
@@ -145,6 +157,8 @@
     padding: 0.8rem 0.75rem;
   }
 }
+
+
 
 // Smartphones
 @media (max-width: 500px) {
