reduced image and gif size to improve site performance

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,9 +4,9 @@ $main-color: #0e2f44;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
-$showcase-bg: url('../img/home/showcase-bg.jpg');
-$members-bg: url('../img/home/members-bg.jpg');
-$work-bg: url('../img/home/work-bg.jpg');
-$gallery-bg: url('../img/home/gallery-bg.png');
-$inner-nav-bg: url('../img/inner-nav-bg.jpg');
-$events-bg: url('../img/events/events-bg.jpeg');
+$showcase-bg: url('../img/home/showcase-bg.webp');
+$members-bg: url('../img/home/members-bg.webp');
+$work-bg: url('../img/home/work-bg.webp');
+$gallery-bg: url('../img/home/gallery-bg.webp');
+$inner-nav-bg: url('../img/inner-nav-bg.webp');
+$events-bg: url('../img/events/events-bg.webp');
